I created task app.get for the part to get income details for each user

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sd2-example",
+  "name": "family-budget",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
+    "pug": "^3.0.2",
     "sqlite3": "^5.0.2",
     "supervisor": "^0.12.0"
   }
